tests/errors/test_93.x
// No such struct to implement trait for 

trait ReturnOne -> {
	return_one() -> i64;
}

impl ReturnOne for Foo -> {

}

fn main() -> void {}
